--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>5.8.1</junit.version>
-        <javafx.version>18-ea+9</javafx.version>
+        <javafx.version>19-internal+0-2022-02-27-083733</javafx.version>
     </properties>
 
     <dependencies>
